# c-seo-bench

./: LICENSE  README.md  config.json  pyproject.toml  requirements.txt
notebooks/: 1_prepare_documents_to_improve.ipynb  2_run_cseo_methods.ipynb  3_run_cseo_bench.ipynb  4_evaluation.ipynb
scripts/: download_results.py
src/benchmark/: engine.py
src/config/: __init__.py  adoption_mode.py
src/data/: benchmark.py
src/llms/: __init__.py  anthropic.py  llm_interface.py  openai.py
src/methods/: __init__.py  citation_boosting.py  content_improvement.py  geo_methods.py  llmstxt.py
